Fixed the hidden overflow when not viewing in full screen

--- a/stylesheets/owlfg_styling.css
+++ b/stylesheets/owlfg_styling.css
@@ -10,7 +10,6 @@ body {
     width: 100%;
     height: 100%;
     padding-top: 50px;
-    overflow-y:hidden;
 
   }
 
@@ -53,10 +52,8 @@ body {
     height: 100%;           /* cross-browser */;
     border-top: 1px solid #000;
     border-left: 1px solid #000;
-    border-right: 1px solid #000;
-    /*
-    background-color: #000;
-    */
+    border-right: 2px solid #000;
+    background-color: #f8f8f8;
 }
 
 #refine-button {
@@ -71,8 +68,9 @@ body {
     float: right;
     height: 20%;
     width: 75%;
-    border-style: solid;
-    border-width: 1px;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    border-right: 2px solid #000;
 }
 
 #list-me {
@@ -92,7 +90,6 @@ body {
     height: 80%;
     width: 75%;
     border-top: 1px solid #000;
-    border-left: 1px solid #000;
     border-right: 1px solid #000;
 }
 
